[package]
name = "tytodb-conn"
version = "0.1.0"
edition = "2024"

[dependencies]
falcotcp = { version="0.1.0", default-features = false, features = [] }
zstd = "0.13.3"

[features]
default = []
thread = ["falcotcp/thread"]
tokio = ["falcotcp/tokio-runtime"]
asyncstd = ["falcotcp/async-std-runtime"]
