[package]
name = "tytodb-client"
version = "0.1.2"
edition = "2024"
description = "A connection handler for TytoDB."
repository = "https://github.com/FeatheredSystems/TytoDB-Rust-Client"
license = "Apache-2.0"

[dependencies]
falcotcp = { version="0.1.0", default-features = false, features = [] }
tokio = {version="1",features=["full"], optional = true}
async-std = {version="1", optional=true}

[features]
default = []
thread = ["falcotcp/thread"]
tokio = ["falcotcp/tokio-runtime","dep:tokio"]
asyncstd = ["falcotcp/async-std-runtime","dep:async-std"]
